--- a/carmanager/src/main/webapp/css/login.css
+++ b/carmanager/src/main/webapp/css/login.css
@@ -1,4 +1,5 @@
 @CHARSET "UTF-8";
+
 html  {
   height: 100%;
 }
@@ -45,14 +46,16 @@ loginForm {
   width: 250px;
   height: 150px;
   position: absolute;
-  top: 51px;
-  right: 0px;
+  top: 30%;
+  left: 40%;
  
-  margin: 100px 20px;
-  
-  background-color: white;
   /*background-color: #59f;*/
-  float: right;
+  float: left;
+  border: 1px solid red;
+}
+
+input {
+	height: 35px; 
 }
 
 #email {
@@ -63,6 +66,8 @@ loginForm {
   margin: 15px 0px 0px 15px;
 }
 
+A:hover  {color:white; text-decoration:underline; }
+
 #link {
 	padding-top: 15px;
 	height: 50px;
@@ -70,12 +75,24 @@ loginForm {
 	font-size: 15px;
 }
 
+.link {
+  text-decoration:none;
+  font-size:15px;
+  font-weight: bold;
+  height:20px;
+  width:60px;
+  display:inline-block;
+  padding-top:2px;
+  color:white;
+  text-align:center;
+}
+
 #input_email {
-	margin: 0px 0px 0px 36px;
+	margin-left: 40px;
 }
 
 #input_password {
-  margin: 0px 0px 0px 10px;
+  margin-left: 40px;
 }
 
 
