--- a/carmanager/src/main/webapp/css/main.css
+++ b/carmanager/src/main/webapp/css/main.css
@@ -87,7 +87,7 @@ h1, h2, h3, p {
 }
 
 
-
+/* 4가지 차트 view 부분 */
 .selectcar {
     border: 1px solid red;
     position: absolute;
@@ -101,7 +101,9 @@ h1, h2, h3, p {
     border: 1px solid red;
     position: absolute;
     top: 10%;
-    left: 22%;
+    left: 21%;
+    margin: 0px;
+    padding: 0px;
 }
 
 .effi {
@@ -124,3 +126,4 @@ h1, h2, h3, p {
     left: 46%;
     bottom: 35%;
 }
+/* view 부분 끝 */
