--- a/carmanager/src/main/webapp/css/main.css
+++ b/carmanager/src/main/webapp/css/main.css
@@ -72,6 +72,28 @@ h1, h2, h3, p {
   border: 1px solid red;        
 }
 
+.menuview li {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.menuview a {
+  /*background: #333;*/
+  border-bottom: 1px solid #393939;
+  color: #ccc;
+  display: block;
+  /*margin: 0;*/
+  padding: 8px 12px;
+  text-decoration: none;
+  /*font-weight: normal;*/
+}
+
+.menuview a:hover {
+  background: #2580a2 url("images/hover.gif") left center no-repeat;
+  color: #fff;
+  /*padding-bottom: 8px;*/
+}
 
 
 /* copyright 부분  */
