--- a/carmanager/src/main/webapp/css/login.css
+++ b/carmanager/src/main/webapp/css/login.css
@@ -2,6 +2,7 @@
 
 html  {
   height: 100%;
+	border: 1px solid blue;
 }
 body {
  
@@ -13,15 +14,17 @@ body {
 .container {
   position: relative;
   padding: 0px;
-  height: 100%;
+  width: 100%;
+  height: 86%;
+	border: 1px solid yellow;
 }
 
 /* 본문 내용 설정 */
 section {
   /*margin: 0 181px 0 181px;*/
-  height: 86%;
+  height: 100%;
   padding: 0px 0px;
-  min-width: 300px;
+	border: 1px solid green;
 }
 #toolbar {
   margin: 10px 0px;
@@ -93,3 +96,19 @@ A:hover {
 }
 
 /* 끝 - 오른쪽 편 영역 설정 */
+header {
+  border: 1px solid red;
+  width: 100%;
+  height: 7%;
+  position: relative;
+  color: white;
+}
+footer {
+	border: 1px solid red;
+  width: 100%;
+  height: 7%;
+  position: relative;
+  left: 0px;
+  bottom: 0px;
+  text-align: center;
+}
