--- a/carmanager/src/main/webapp/css/join.css
+++ b/carmanager/src/main/webapp/css/join.css
@@ -2,6 +2,7 @@
 
 html  {
   height: 100%;
+  border: 1px solid blue;
 }
 
 body {
@@ -13,16 +14,18 @@ body {
 .container {
   position: relative;
   padding: 0px;
-  height: 100%;
+  width: 100%;
+  height: 86%;
+  border: 1px solid yellow;
 }
 
 /* 본문 내용 설정 */
 section {
   /*margin: 0 181px 0 181px;*/
-  height: 86%;
+  height: 100%;
   padding: 0px 0px;
   min-width: 300px;
-  border: 1px solid red;
+  border: 1px solid green;
 }
 
 /* 끝 - 본문 내용 설정 */
@@ -132,3 +135,19 @@ section {
 
 
 /* 끝 - 오른쪽 편 영역 설정 */
+header {
+  border: 1px solid red;
+  width: 100%;
+  height: 7%;
+  position: relative;
+  color: white;
+}
+footer {
+	border: 1px solid red;
+  width: 100%;
+  height: 7%;
+  position: relative;
+  left: 0px;
+  bottom: 0px;
+  text-align: center;
+}
