--- a/carmanager/src/main/webapp/css/login.css
+++ b/carmanager/src/main/webapp/css/login.css
@@ -2,7 +2,7 @@
 
 html  {
   height: 100%;
-	border: 1px solid blue;
+	/*border: 1px solid blue;*/
 }
 body {
  
@@ -15,8 +15,8 @@ body {
   position: relative;
   padding: 0px;
   width: 100%;
-  height: 86%;
-	border: 1px solid yellow;
+  height: 86%;/*
+	border: 1px solid yellow;*/
 }
 
 /* 본문 내용 설정 */
@@ -38,7 +38,7 @@ section {
   font-weight: bold;
   font-size: 20px;
   color: blue;
-  border: 1px solid red;
+  /*border: 1px solid red;*/
 }
 
 /* 오른쪽 로그인 영역 설정 */
@@ -104,14 +104,14 @@ A:hover {
 
 /* 끝 - 오른쪽 편 영역 설정 */
 header {
-  border: 1px solid red;
+  /*border: 1px solid red;*/
   width: 100%;
   height: 7%;
   position: relative;
   color: white;
 }
 footer {
-	border: 1px solid red;
+	/*border: 1px solid red;*/
   width: 100%;
   height: 7%;
   position: relative;
