--- a/carmanager/src/main/webapp/css/main.css
+++ b/carmanager/src/main/webapp/css/main.css
@@ -26,8 +26,9 @@ h1, h2, h3, p {
     width: 20%;
     height: 100%;
     min-height: 650px;
-    background: whitesmoke;
-    border-right: 1px solid gainsboro;
+    color: black;
+    background: white;
+    border-right: 1px solid rgb(223, 223, 223);
 }
 
 .view {
@@ -97,7 +98,7 @@ h1, h2, h3, p {
 }
 
 .menuview a:hover {
-  background: rgb(83, -66, -67);
+  background: rgb(92, 178, 171);
   color: #fff;
 }
 
