--- a/carmanager/src/main/webapp/css/login.css
+++ b/carmanager/src/main/webapp/css/login.css
@@ -54,12 +54,12 @@ section {
 
 #null {
   width: 300px;
-  height: 300px;
+  height: 400px;
   position: absolute;
-  top: 28.4%;
+  top: 17%;
   right: 5%;
   
-  background-color: gray;
+  background-color: black;
   opacity: 0.7;
   
   float: left;
