--- a/carmanager/src/main/webapp/css/main.css
+++ b/carmanager/src/main/webapp/css/main.css
@@ -1,4 +1,5 @@
 @CHARSET "UTF-8";
+@import url(http://fonts.googleapis.com/earlyaccess/jejugothic.css);
 
 html {
   height: 100%;
@@ -30,6 +31,7 @@ h1, h2, h3, p {
     color: black;
     background: white;
     border-right: 1px solid rgb(223, 223, 223);
+    font-family: 'Jeju Gothic', sans-serif;
 }
 
 .view {
@@ -96,6 +98,7 @@ h1, h2, h3, p {
   display: block;
   padding: 13px 12px;
   text-decoration: none;
+      font-family: 'Jeju Gothic', sans-serif;
 }
 
 .menuview a:hover {
