--- a/carmanager/src/main/webapp/css/main.css
+++ b/carmanager/src/main/webapp/css/main.css
@@ -124,7 +124,7 @@ h1, h2, h3, p {
 
 /* 4가지 차트 view 부분 */
 .selectcar {
-    border: 1px solid red;
+    /*border: 1px solid red;*/
     position: absolute;
     float: left;
     left: 300px;
@@ -133,7 +133,8 @@ h1, h2, h3, p {
 }
 
 .averoil {
-    border: 1px solid red;
+    /*border: 1px solid red;*/
+    border-right: 1px solid rgb(223, 223, 223);
     position: absolute;
     top: 70px;
     left: 280px;
@@ -142,21 +143,32 @@ h1, h2, h3, p {
 }
 
 .effi {
-    border: 1px solid red;
+    /*border: 1px solid red;*/
+    border-bottom: 1px solid rgb(223, 223, 223);
     position: absolute;
     top: 70px;
     left: 800px;
 }
 
 .viewintitle {
-    border: 1px solid red;
+    /*border: 1px solid red;*/
+    position: absolute;
+    top: 410px;
+    left: 280px; 
+    z-index: 10;     
+}
+
+.viewinslide {
+    /*border: 1px solid red;*/
+    border-right: 1px solid rgb(223, 223, 223);
     position: absolute;
     top: 410px;
     left: 280px;      
 }
 
 .buyoil {
-    border: 1px solid red;
+    /*border: 1px solid red;*/
+    border-bottom: 1px solid rgb(223, 223, 223);
     position: absolute;
     top: 410px;
     left: 800px;
