--- a/carmanager/src/main/webapp/css/join.css
+++ b/carmanager/src/main/webapp/css/join.css
@@ -27,18 +27,27 @@ section {
 
 /* 끝 - 본문 내용 설정 */
 
-/* 오른쪽 편 영역 설정 */
+/* 왼쪽 편 영역 설정 */
 #mainText {
-  width: 300px;
+  width: 500px;
   height: 220px;
   position: absolute;
-  top: 28.4%;
-  left: 5%;
-  font-weight: bold;
-  font-size: 20px;
-  color: blue;
+  top: 32%;
+  left: 10%;
+  font-weight: lighter;
+  font-size: 40px;
+  color: antiquewhite;
+  text-shadow: darkgray 1px 1px 10px;
+  font-family: sans-serif;
+  /*border: 1px solid red;*/
 }
 
+.intext {
+    font-size: 42px;
+    font-weight: bolder;
+}
+
+/* 오른쪽 편 영역 설정 */
 #join {
   width: 430px;
   height: 300px;
