--- a/carmanager/src/main/webapp/css/login.css
+++ b/carmanager/src/main/webapp/css/login.css
@@ -2,21 +2,46 @@
 
 html  {
   height: 100%;
-	/*border: 1px solid blue;*/
 }
+
 body {
- 
   height: 100%;
   margin: 0px;
   padding: 0px;
 
 }
+
+/*로고 영역 부분*/
+header {
+  width: 100%;
+  height: 7%;
+  position: relative;
+  background-color: white;
+}
+
+.logo {
+  height: 100%;
+  width: 20%;
+}
+
+/*
+footer {
+  width: 100%;
+  height: 7%;
+  position: relative;
+  left: 0px;
+  bottom: 0px;
+  text-align: center;
+}
+*/
+
 .container {
   position: relative;
   padding: 0px;
   width: 100%;
-  height: 86%;/*
-	border: 1px solid yellow;*/
+  height: 86%;
+  border-top: 3px solid rgb(223, 223, 223);
+  border-bottom: 3px solid rgb(223, 223, 223);
 }
 
 /* 본문 내용 설정 */
@@ -27,11 +52,18 @@ section {
 }
 /* 끝 - 본문 내용 설정 */
 
-/* 왼쪽 텍스트 영역 설정 */
+/* 멘트 영역 부분 */
 #mainText {
   width: 500px;
   height: 220px;
   position: absolute;
+
+  top: 28.4%;
+  left: 5%;
+  font-weight: bold;
+  font-size: 20px;
+  color: white;
+
   top: 32%;
   left: 10%;
   font-weight: lighter;
@@ -123,22 +155,4 @@ A:hover {
   padding-top:2px;
   text-align:center;
   color: white;
-}
-
-/* 끝 - 오른쪽 편 영역 설정 */
-header {
-  /*border: 1px solid red;*/
-  width: 100%;
-  height: 7%;
-  position: relative;
-  color: white;
-}
-footer {
-	/*border: 1px solid red;*/
-  width: 100%;
-  height: 7%;
-  position: relative;
-  left: 0px;
-  bottom: 0px;
-  text-align: center;
 }
