--- a/carmanager/src/main/webapp/css/main.css
+++ b/carmanager/src/main/webapp/css/main.css
@@ -5,7 +5,7 @@ html {
   height: 100%;
   background: whitesmoke;
   /*background: rgb(245, 252, 243);*/
-  min-height: 650px;
+  /*min-height: 650px;*/
 }
 
 body {
@@ -15,8 +15,8 @@ body {
 }
 
 h1, h2, h3, p {
-    margin: 0;
-	padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 .menubar {
@@ -27,8 +27,8 @@ h1, h2, h3, p {
     z-index: 11;
     width: 20%;
     height: 100%;
-    min-height: 650px;
-    color: black;
+    /*min-height: 650px;*/
+    color: slategray;
     background: white;
     border-right: 1px solid rgb(223, 223, 223);
     font-family: 'Jeju Gothic', sans-serif;
@@ -52,6 +52,11 @@ h1, h2, h3, p {
   text-align: center; 
   display: table-cell;
   vertical-align: middle;
+}
+
+.logo {
+  height: 40%;
+  width: 75%; 
 }
 
 /*유저정보*/
@@ -94,7 +99,7 @@ h1, h2, h3, p {
 }
 
 .menuview a {
-  /*border-bottom: 1px solid #393939;*/
+  border-bottom: 1px solid whitesmoke;
   color: slategray;
   display: block;
   padding: 13px 12px;
@@ -103,7 +108,8 @@ h1, h2, h3, p {
 }
 
 .menuview a:hover {
-  background: rgb(55, 55, 55);  
+  background: rgb(45, 57, 90);
+  /*background: rgb(55, 55, 55);  */
   /*background: rgb(92, 178, 171);*/
   color: #fff;
 }
