--- a/carmanager/src/main/webapp/css/main.css
+++ b/carmanager/src/main/webapp/css/main.css
@@ -25,7 +25,8 @@ h1, h2, h3, p {
     top: 0;
     left: 0;
     z-index: 11;
-    width: 20%;
+    width: 250px;
+    /*width: 20%;*/
     height: 100%;
     /*min-height: 650px;*/
     color: slategray;
