--- a/carmanager/src/main/webapp/css/main.css
+++ b/carmanager/src/main/webapp/css/main.css
@@ -138,6 +138,7 @@ h1, h2, h3, p {
     border-right: 1px solid rgb(223, 223, 223);
     position: absolute;
     top: 70px;
+    max-width: 480px;
     left: 280px;
     margin: 0px;
     padding: 0px;
@@ -148,6 +149,7 @@ h1, h2, h3, p {
     border-bottom: 1px solid rgb(223, 223, 223);
     position: absolute;
     top: 70px;
+    max-width: 450px;
     left: 800px;
 }
 
@@ -170,6 +172,7 @@ h1, h2, h3, p {
     border-right: 1px solid rgb(223, 223, 223);
     position: absolute;
     top: 410px;
+    max-width: 480px;
     left: 280px;      
 }
 
@@ -177,6 +180,7 @@ h1, h2, h3, p {
     /*border: 1px solid red;*/
     border-bottom: 1px solid rgb(223, 223, 223);
     position: absolute;
+    max-width: 450px;
     top: 410px;
     left: 800px;
 }
