--- a/carmanager/src/main/webapp/css/main.css
+++ b/carmanager/src/main/webapp/css/main.css
@@ -140,12 +140,15 @@ h1, h2, h3, p {
     margin: 0px;
 }
 
+#select_container{
+  width:90px; 
+}
+
 .averoil {
     /*border: 1px solid red;*/
     border-right: 1px solid rgb(223, 223, 223);
     position: absolute;
     top: 70px;
-    max-width: 480px;
     left: 280px;
     margin: 0px;
     padding: 0px;
@@ -156,7 +159,6 @@ h1, h2, h3, p {
     border-bottom: 1px solid rgb(223, 223, 223);
     position: absolute;
     top: 70px;
-    max-width: 450px;
     left: 800px;
 }
 
@@ -179,7 +181,6 @@ h1, h2, h3, p {
     border-right: 1px solid rgb(223, 223, 223);
     position: absolute;
     top: 410px;
-    max-width: 480px;
     left: 280px;      
 }
 
@@ -187,7 +188,6 @@ h1, h2, h3, p {
     /*border: 1px solid red;*/
     border-bottom: 1px solid rgb(223, 223, 223);
     position: absolute;
-    max-width: 450px;
     top: 410px;
     left: 800px;
 }
