--- a/carmanager/src/main/webapp/css/main.css
+++ b/carmanager/src/main/webapp/css/main.css
@@ -159,6 +159,7 @@ h1, h2, h3, p {
     border-bottom: 1px solid rgb(223, 223, 223);
     position: absolute;
     top: 70px;
+    max-width: 450px;
     left: 800px;
 }
 
@@ -189,6 +190,7 @@ h1, h2, h3, p {
     border-bottom: 1px solid rgb(223, 223, 223);
     position: absolute;
     top: 410px;
+    max-width: 450px;
     left: 800px;
 }
 
