--- a/carmanager/src/main/webapp/css/main.css
+++ b/carmanager/src/main/webapp/css/main.css
@@ -136,8 +136,20 @@ h1, h2, h3, p {
     position: absolute;
     float: left;
     left: 300px;
-    top: 2.5%;
+    top: 8px;
+    margin: 0px;    
+}
+.selectcartext {
+     position: absolute;
+    left: 350px;
+    z-index: 100;
+    top: 8px;
     margin: 0px;
+}
+.carbox {
+    width: 1250px;
+    height: 60px;
+    border-bottom: 1px solid rgb(223, 223, 223);
 }
 
 #select_container{
@@ -159,7 +171,8 @@ h1, h2, h3, p {
     border-bottom: 1px solid rgb(223, 223, 223);
     position: absolute;
     top: 70px;
-    max-width: 450px;
+    width: 450px;
+    
     left: 800px;
 }
 
@@ -172,6 +185,9 @@ h1, h2, h3, p {
 }
 
 .titlemsg {
+    position: absolute;
+    width: 450px;
+    height: 300px;
     margin-top: 20px;
     margin-left: 10px;
     text-shadow: whitesmoke 0px 0px 5px;
@@ -182,7 +198,8 @@ h1, h2, h3, p {
     border-right: 1px solid rgb(223, 223, 223);
     position: absolute;
     top: 410px;
-    left: 280px;      
+    left: 280px;
+    width: 494px;      
 }
 
 .buyoil {
