--- a/carmanager/src/main/webapp/css/main.css
+++ b/carmanager/src/main/webapp/css/main.css
@@ -134,18 +134,13 @@ h1, h2, h3, p {
 .selectcar {
     /*border: 1px solid red;*/
     position: absolute;
-    float: left;
+    
+    /*float: left;*/
     left: 300px;
     top: 8px;
     margin: 0px;    
 }
-.selectcartext {
-     position: absolute;
-    left: 350px;
-    z-index: 100;
-    top: 8px;
-    margin: 0px;
-}
+
 .carbox {
     width: 1250px;
     height: 60px;
@@ -160,7 +155,7 @@ h1, h2, h3, p {
     /*border: 1px solid red;*/
     border-right: 1px solid rgb(223, 223, 223);
     position: absolute;
-    top: 70px;
+    top: 300px;
     left: 280px;
     margin: 0px;
     padding: 0px;
@@ -170,7 +165,7 @@ h1, h2, h3, p {
     /*border: 1px solid red;*/
     border-bottom: 1px solid rgb(223, 223, 223);
     position: absolute;
-    top: 70px;
+    top: 300px;
     width: 450px;
     
     left: 800px;
