메뉴바 ui 수정

--- a/carmanager/src/main/webapp/css/main.css
+++ b/carmanager/src/main/webapp/css/main.css
@@ -46,15 +46,17 @@ h1, h2, h3, p {
 
 /* 로고 관련 */
 .logowrapper {
-  height: 30%;
+  height: 25%;
   width: 100%;
   display: table; 
+  /*border-bottom: 1px solid dimgray;*/
 }
 
 .logoview {
-  text-align: center; 
+  text-align: left; 
   display: table-cell;
   vertical-align: middle;
+
 }
 
 .logo {
@@ -64,7 +66,7 @@ h1, h2, h3, p {
 }
 
 /*유저정보*/
-.userinfowrapper {
+/*.userinfowrapper {
   height: 10%;
   width: 100%;
   display: table;
@@ -75,19 +77,19 @@ h1, h2, h3, p {
   font-size: smaller;
   display: table-cell;
   vertical-align: middle;
-}
+}*/
 
 /* 메뉴 바 */
 .menuwrapper {
-  height: 50%;    
+  height: 65%;    
   width: 100%;
-  display: table;
+  /*display: table;*/
 }
 
 .menuview {
-  text-align: center;
-  display: table-cell;
-  vertical-align: middle;    
+  text-align: left;
+  /*display: table-cell;
+  vertical-align: middle;    */
 }
 
 .menuview li {
@@ -107,7 +109,7 @@ h1, h2, h3, p {
   color: darkgray;
   /*color: slategray;*/
   display: block;
-  padding: 13px 12px;
+  padding: 17px 12px;
   text-decoration: none;
   /*font-family: 'Jeju Gothic', sans-serif;*/
 }
