--- a/carmanager/src/main/webapp/css/join.css
+++ b/carmanager/src/main/webapp/css/join.css
@@ -1,3 +1,6 @@
+@import url('demo.css');
+@import url('font-awesome.css');
+
 @CHARSET "UTF-8";
 
 html  {
@@ -32,8 +35,8 @@ section {
   width: 500px;
   height: 220px;
   position: absolute;
-  top: 32%;
-  left: 10%;
+  top: 20.2%;
+  left: 8%;
   font-weight: lighter;
   font-size: 40px;
   color: antiquewhite;
@@ -48,20 +51,10 @@ section {
 }
 
 /* 오른쪽 편 영역 설정 */
-#join {
-  width: 430px;
-  height: 300px;
-  position: absolute;
-  top: 23%;
-  right: 5%;
- 
-  /*background-color: #59f;*/
-  float: right;
-}
 
 #null {
   width: 430px;
-  height: 400px;
+  height: 430px;
   position: absolute;
   top: 17%;
   right: 5%;
@@ -81,6 +74,8 @@ section {
 }
 
 #imgInput {
+  margin-left: 10px;
+  margin-right: 10px;
 	float: left;
 	width: 150px;
   text-align: center;
@@ -96,14 +91,19 @@ section {
 #imgInput label {
 	display: inline-block;
   padding: .5em .75em;
-  font-size: inherit;
-  line-height: normal;
-  vertical-align: middle;
-  background-color: white;
+  
+  background: darkred;
+  border-radius: 5px;
+  border: 1px solid #4e3043;
+  box-shadow: inset 0 1px rgba(255,255,255,0.4), 0 2px 1px rgba(0,0,0,0.1);
   cursor: pointer;
-  border:2px outset lightgray;
-  border-bottom-color: #efefef;
-  border-radius: .25em;
+  transition: all 0.3s ease-out;
+  
+  color: white;
+  text-shadow: 0 1px 0 rgba(0,0,0,0.3);
+  font-size: 16px;
+  font-weight: bold;
+  font-family: 'Raleway', 'Lato', Arial, sans-serif;
 }
 
 #imgInput input {
@@ -117,43 +117,173 @@ section {
   border: 0;
 }
 
-#textInput {
-  width: 280px;
+.input {
+  /* Size and position */
+  width: 400px;
+  position: absolute;
+  top: 21%;
+  right: 6%;
+  
+  float: left;
+
+  /* Font styles */
+  font-family: 'Raleway', 'Lato', Arial, sans-serif;
+  color: white;
+  text-shadow: 0 2px 1px rgba(0,0,0,0.3);
 }
 
-.form-group input {
-	margin-top : 10px;
+#textInput input[type=text], 
+#textInput input[type=password] {
+  width: 140px;
 }
 
-#check {
-	margin-top: 0.5px;
+#textInput input[type=text],
+#textInput input[type=password] {
+  padding: 8px 4px 8px 10px;
+  margin-bottom: 15px;
+
+  /* Styles */
+  border: 1px solid #4e3043; /* Fallback */
+  border: 1px solid rgba(78,48,67, 0.8);
+  background: rgba(0,0,0,0.5);
+  border-radius: 2px;
+  box-shadow: 
+      0 1px 0 rgba(255,255,255,0.2), 
+      inset 0 1px 1px rgba(0,0,0,0.1);
+  -webkit-transition: all 0.3s ease-out;
+  -moz-transition: all 0.3s ease-out;
+  -ms-transition: all 0.3s ease-out;
+  -o-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
+
+  /* Font styles */
+  font-family: 'Raleway', 'Lato', Arial, sans-serif;
+  color: #fff;
+  font-size: 13px;
+}
+
+#textInput label {
+    display: none;
+    padding: 0 0 5px 2px;
+    cursor: pointer;
+}
+
+.input label:hover ~ input {
+    border-color: #333;
+}
+
+.input label {
+    display: block;
 }
 
 #button {
-	padding-top: 25px;
-	height: 50px;
-	text-align: center;
+  text-align: center;
 }
 
-#input_email {
-	margin-left: 20px;
-  margin-bottom: 10px;
+#button input {
+  margin-left: 10px;
 }
 
-#input_nickName {
-  margin-left: 20px;
-    margin-bottom: 10px;
+#button input{
+    /* Size and position */
+    width: 100px;
+    padding: 8px 5px;
+    
+    /* Styles */
+    background: #634056;
+    background: -moz-linear-gradient(rgba(99,64,86,0.5), rgba(76,49,65,0.7));
+    background: -ms-linear-gradient(rgba(99,64,86,0.5), rgba(76,49,65,0.7));
+    background: -o-linear-gradient(rgba(99,64,86,0.5), rgba(76,49,65,0.7));
+    background: -webkit-gradient(linear, 0 0, 0 100%, from(rgba(99,64,86,0.5)), to(rgba(76,49,65,0.7)));
+    background: -webkit-linear-gradient(rgba(99,64,86,0.5), rgba(76,49,65,0.7));
+    background: darkred; /* linear-gradient(rgba(0,0,0,0.5), rgba(255,255,255,0.7));    */
+    border-radius: 5px;
+    border: 1px solid #4e3043;
+    box-shadow: inset 0 1px rgba(255,255,255,0.4), 0 2px 1px rgba(0,0,0,0.1);
+    cursor: pointer;
+    -webkit-transition: all 0.3s ease-out;
+    -moz-transition: all 0.3s ease-out;
+    -ms-transition: all 0.3s ease-out;
+    -o-transition: all 0.3s ease-out;
+    transition: all 0.3s ease-out;
+
+    /* Font styles */
+    color: white;
+    text-shadow: 0 1px 0 rgba(0,0,0,0.3);
+    font-size: 16px;
+    font-weight: bold;
+    font-family: 'Raleway', 'Lato', Arial, sans-serif;
 }
 
-#input_password {
-  margin-left: 20px;
-    margin-bottom: 10px;
+#check {
+  /* Size and position */
+    width: 80px;
+    padding: 8px 5px;
+    
+    /* Styles */
+    background: #634056;
+    background: -moz-linear-gradient(rgba(99,64,86,0.5), rgba(76,49,65,0.7));
+    background: -ms-linear-gradient(rgba(99,64,86,0.5), rgba(76,49,65,0.7));
+    background: -o-linear-gradient(rgba(99,64,86,0.5), rgba(76,49,65,0.7));
+    background: -webkit-gradient(linear, 0 0, 0 100%, from(rgba(99,64,86,0.5)), to(rgba(76,49,65,0.7)));
+    background: -webkit-linear-gradient(rgba(99,64,86,0.5), rgba(76,49,65,0.7));
+    background: darkred; /* linear-gradient(rgba(0,0,0,0.5), rgba(255,255,255,0.7));    */
+    border-radius: 5px;
+    border: 1px solid #4e3043;
+    box-shadow: inset 0 1px rgba(255,255,255,0.4), 0 2px 1px rgba(0,0,0,0.1);
+    cursor: pointer;
+    -webkit-transition: all 0.3s ease-out;
+    -moz-transition: all 0.3s ease-out;
+    -ms-transition: all 0.3s ease-out;
+    -o-transition: all 0.3s ease-out;
+    transition: all 0.3s ease-out;
+
+    /* Font styles */
+    color: white;
+    text-shadow: 0 1px 0 rgba(0,0,0,0.3);
+    font-size: 16px;
+    font-weight: bold;
+    font-family: 'Raleway', 'Lato', Arial, sans-serif;
 }
 
-#input_password_confirm {
-  margin-left: 20px;
+#textInput input[type=button]:hover, #button input[type=button]:hover, #imgInput label:hover {
+    background: red;
+    
+    /*box-shadow: 
+        inset 0 1px rgba(255,255,255,0.5), 
+        inset 0 20px 30px rgba(145,0,0,0.5);*/
 }
 
+#textInput input::-webkit-input-placeholder {
+    color: white;
+    text-shadow: 0 1px 0 rgba(255,255,255,0.15);
+}
+
+#textInput input:-moz-placeholder {
+    color: white;
+    text-shadow: 0 1px 0 rgba(255,255,255,0.15);
+}
+
+#textInput input:-ms-input-placeholder {
+    color: white;
+    text-shadow: 0 1px 0 rgba(255,255,255,0.15);
+}
+
+#textInput input:hover, #imgInput label:hover, #button input:hover {
+    border-color: white;
+}
+
+#textInput input:focus, #imgInput label:focus, #button input:focus {
+    box-shadow: 
+        0 1px 0 rgba(255,255,255,0.2), 
+        inset 0 1px 1px rgba(0,0,0,0.1),
+        0 0 0 3px rgba(255,255,255,0.15);
+    outline: none;
+}
+
+#textInput input:focus {
+    outline: 1px solid white;
+}
 
 /* 끝 - 오른쪽 편 영역 설정 */
 header {
