--- a/carmanager/src/main/webapp/css/login.css
+++ b/carmanager/src/main/webapp/css/login.css
@@ -75,6 +75,7 @@ section {
 
 /* 오른쪽 로그인 영역 설정 */
 
+/* 로그인 폼 뒷부분 배경 */
 #null {
   width: 400px;
   height: 400px;
@@ -90,87 +91,7 @@ section {
   float: left;
 }
 
-/*
-#email {
-	margin: 25px 0 0 30px;
-}
-
-#password {
-  margin: 30px 0 0 30px;
-}
-*/
-
-.form-control {
-	width: 88%
-}
-
-#topText {
-	font-size: 25px;
-	text-align: center;
-	padding-top: 10px;
-	margin-bottom: 10px;
-  font-weight: bold;
-  color: white;
-}
-
-#goJoin {
-  float: right;
-}
-
-a:link, a:visited {
-  color: white;
-  text-decoration: none;
-}
-
-A:hover {
-	color:white; 
-	background-color: Highlight;
-	color: HighlightText; 
-	text-decoration:underline;
-}
-
-#link {
-	padding-top: 15px;
-	height: 50px;
-	text-align: center;
-	font-size: 15px;
-  color: white;
-  font-weight: bold;
-}
-
-.link {
-  text-decoration:none;
-  font-size:15px;
-  font-weight: bold;
-  height:20px;
-  width:60px;
-  display:inline-block;
-  padding-top:2px;
-  text-align:center;
-  color: white;
-}
-
-/* GLOBALS */
-
-*,
-*:after,
-*:before {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -ms-box-sizing: border-box;
-    -o-box-sizing: border-box;
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-}
-
-.clearfix:after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
-/* Demo 4 */
+/* 로그인 폼 시작 */
 
 .form-4 {
     /* Size and position */
@@ -219,8 +140,6 @@ A:hover {
     font-size: 13px;
 }
 
-/* Placeholder style (from http://stackoverflow.com/questions/2610497/change-an-inputs-html5-placeholder-color-with-css) */
-
 .form-4 input::-webkit-input-placeholder {
     color: white;
     text-shadow: 0 1px 0 rgba(255,255,255,0.15);
@@ -237,13 +156,13 @@ A:hover {
 }
 
 .form-4 input[type=text]:hover,
-.form-4 input[type=password]:hover {
+.form-4 input[type=password]:hover,
+.form-4 input[type=button]:hover {
     border-color: white;
 }
 
 .form-4 input[type=text]:focus,
-.form-4 input[type=password]:focus,
-.form-4 input[type=button]:focus {
+.form-4 input[type=password]:focus {
     box-shadow: 
         0 1px 0 rgba(255,255,255,0.2), 
         inset 0 1px 1px rgba(0,0,0,0.1),
@@ -252,8 +171,8 @@ A:hover {
 }
 
 /* Fallback */
-.no-boxshadow .form-4 input[type=text]:focus,
-.no-boxshadow .form-4 input[type=password]:focus {
+.form-4 input[type=text]:focus,
+.form-4 input[type=password]:focus {
     outline: 1px solid white;
 }
 
@@ -290,10 +209,6 @@ A:hover {
 
 .form-4 input[type=button]:hover {
     background: red;
-    
-    /*box-shadow: 
-        inset 0 1px rgba(255,255,255,0.5), 
-        inset 0 20px 30px rgba(145,0,0,0.5);*/
 }
 
 /* Fallback */
@@ -314,3 +229,30 @@ A:hover {
 .no-placeholder .form-4 label {
     display: block;
 }
+
+#topText {
+	font-size: 25px;
+	text-align: center;
+	padding-top: 10px;
+	margin-bottom: 10px;
+  font-weight: bold;
+  color: white;
+}
+
+#goJoin {
+  float: right;
+}
+
+a:link, a:visited {
+  color: white;
+  text-decoration: none;
+}
+
+A:hover {
+	color:white; 
+	background-color: Highlight;
+	color: HighlightText; 
+	text-decoration:underline;
+}
+
+/* 로그인 폼 끝 */
