--- a/carmanager/src/main/webapp/css/main.css
+++ b/carmanager/src/main/webapp/css/main.css
@@ -1,19 +1,19 @@
 @CHARSET "UTF-8";
-/*@import url(http://fonts.googleapis.com/earlyaccess/jejugothic.css);*/
 
 html {
   height: 100%;
   background: whitesmoke;
-  /*background: whitesmoke;*/
-  /*background: rgb(245, 252, 243);*/
-  /*min-height: 650px;*/
 }
 
 body {
   height: 100%;
   margin: 0px;
   padding: 0px;
+  overflow: hidden;
+  /*font-family: helvetica;
+  font-weight: 100;*/
 }
+
 
 h1, h2, h3, p {
   margin: 0;
@@ -26,22 +26,15 @@ h1, h2, h3, p {
     top: 0;
     left: 0;
     z-index: 11;
-    width: 210px;
-    /*width: 20%;*/
+    width: 0px;
     height: 100%;
-    /*min-height: 650px;*/
-    color: darkgray;;
-    /*color: slategray;*/
-    background: white;
     border-right: 1px solid rgb(223, 223, 223);
-    /*font-family: 'Jeju Gothic', sans-serif;*/
 }
 
 .view {
     position: page;
     height: 100%;
     min-height: 650px;
-    /*font-family: 'Jeju Gothic', sans-serif;*/
 }
 
 /* 로고 관련 */
@@ -49,7 +42,6 @@ h1, h2, h3, p {
   height: 205px;
   width: 100%;
   display: table; 
-  /*border-bottom: 1px solid dimgray;*/
 }
 
 .logoview {
@@ -65,19 +57,97 @@ h1, h2, h3, p {
   color: black; 
 }
 
-
 /* 메뉴 바 */
-.menuwrapper {
-  height: 62%;    
+.container {
+  position: relative;
+  height: 100%;
   width: 100%;
-  /*display: table;*/
+  left: 0;
 }
+
+.container.open-sidebar { left: 240px; }
+
+.swipe-area {
+  position: absolute;
+  width: 50px;
+  left: 0;
+  top: 0;
+  height: 100%;
+  background: #f3f3f3;
+  z-index: 0;
+}
+
+#sidebar {
+  background: #DF314D;
+  position: absolute;
+  width: 240px;
+  height: 100%;
+  left: -240px;
+  box-sizing: border-box;
+}
+
+#sidebar ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+#sidebar ul li { margin: 0; }
+
+#sidebar ul li a {
+  padding: 15px 20px;
+  font-size: 16px;
+  font-weight: 100;
+  color: white;
+  text-decoration: none;
+  display: block;
+  border-bottom: 1px solid #C9223D;
+}
+
+#sidebar ul li:hover a { background: #C9223D; }
+
+
+/*메뉴 버튼 관련 */
+.main-content {
+  /*position: absolute;*/
+  /*left: 30px;
+  top: 30px;*/
+  /*margin: 0px; */
+    
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+  box-sizing: border-box;
+  position: relative;
+}
+.main-content #sidebar-toggle {
+  background: #DF314D;
+  border-radius: 3px;
+  display: block;
+  position: relative;
+  padding: 10px 7px;
+  float: left;
+}
+.main-content #sidebar-toggle .bar {
+  display: block;
+  width: 18px;
+  margin-bottom: 3px;
+  height: 2px;
+  background-color: #fff;
+  border-radius: 1px;
+}
+
+/*.menuwrapper {
+  height: 62%;    
+  width: 100%;*/
+  /*display: table;*/
+/*}
 
 .menuview {
-  text-align: left;
+  text-align: left;*/
   /*display: table-cell;
   vertical-align: middle;*/
-}
+/*}
 
 .menuview li {
   margin-left: 0;
@@ -91,26 +161,27 @@ h1, h2, h3, p {
   list-style: none;
 }
 
-.menuview a {
+.menuview a {*/
   /*border-bottom: 1px solid darkgray;*/
-  color: black;
+  /*color: black;*/
   /*color: slategray;*/
-  display: block;
+  /*display: block;
   padding: 13px 18px;
-  text-decoration: none;
+  text-decoration: none;*/
   /*font-family: 'Jeju Gothic', sans-serif;*/
-}
+/*}*/
 
-.menuview a:hover {
-  background: darkred;
+/*.menuview a:hover {
+  background: darkred;*/
   /*background: rgb(45, 57, 90);*/
   /*background: rgb(55, 55, 55);  */
   /*background: rgb(92, 178, 171);*/
-  color: whitesmoke;
-}
+  /*color: whitesmoke;
+}*/
 
+/* 메뉴 아이콘 설정 */
 .menu_icon {
-  height: 25px;    
+  height: 20px;    
 }
 
 /* copyright 부분  */
@@ -129,9 +200,10 @@ h1, h2, h3, p {
 }
 
 
-/* 4가지 차트 view 부분 */
 
-/* 차 선택 */
+
+
+/* 4가지 차트 view 부분 */
 .selectcar {
     /*border: 1px solid red;*/
     position: absolute;
@@ -142,49 +214,16 @@ h1, h2, h3, p {
     margin: 0px;    
 }
 
-#select_container{
-  width:90px; 
-}
-
 .carbox {
     width: 1250px;
     height: 60px;
     border-bottom: 1px solid rgb(223, 223, 223);
 }
 
-/* 유저정보 */
-
-.userinfo {
-    top: 150px;
-    left: 1020px;
-    width: 100px;
-    height: 100px;
-    margin: 0px;
-    padding: 0px;
-    z-index: 10;
-    position: absolute;
-}
-/* .userinfowrapper {
-  /*top: 400px;
-  left: 500px;
-  height: 100px;
-  width: 100px;*/
-  /*display: table;
+#select_container{
+  width:90px; 
 }
 
-.userinfoview {
-    top: 400px;
-  left: 500px;
-  height: 100px;
-  width: 100px;
-  color: white;
-  text-align: center;
-  font-size: smaller;
-  /*display: table-cell;
-  vertical-align: middle;
-}*/
-
-/* 평균연비 */
 .averoil {
     /*border: 1px solid red;*/
     border-right: 1px solid rgb(223, 223, 223);
@@ -195,7 +234,6 @@ h1, h2, h3, p {
     padding: 0px;
 }
 
-/* 연비효율 */
 .effi {
     /*border: 1px solid red;*/
     border-bottom: 1px solid rgb(223, 223, 223);
@@ -206,7 +244,6 @@ h1, h2, h3, p {
     left: 800px;
 }
 
-/* 이미지위 텍스트 */
 .viewintitle {
     /*border: 1px solid red;*/
     position: absolute;
@@ -224,7 +261,6 @@ h1, h2, h3, p {
     text-shadow: whitesmoke 0px 0px 5px;
 }
 
-/* 이미지슬라이드 */
 .viewinslide {
     /*border: 1px solid red;*/
     border-right: 1px solid rgb(223, 223, 223);
@@ -234,7 +270,6 @@ h1, h2, h3, p {
     width: 494px;      
 }
 
-/* 평균주유값 */
 .buyoil {
     /*border: 1px solid red;*/
     border-bottom: 1px solid rgb(223, 223, 223);
@@ -244,7 +279,7 @@ h1, h2, h3, p {
     left: 800px;
 }
 
-/* 차량 소모품 상태 */
+
 .carcondition {
     border: 1px solid red;
     position: absolute;
